basic page builded

--- a/index.html
+++ b/index.html
@@ -2,25 +2,357 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#E3E3E3" />
     <meta
-      name="description"
-      content="Webseite zur Selbstpräsentation von Dominik Höhr"
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-	
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900"
+      rel="stylesheet"
+    />
+
     <title>Dominik Höhr</title>
-	  
-	<style>
-	</style>
+
+    <!-- Bootstrap core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+
+    <!-- Additional CSS Files -->
+    <link rel="stylesheet" href="assets/css/fontawesome.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/owl.css" />
+    <link rel="stylesheet" href="assets/css/lightbox.css" />
   </head>
+
   <body>
-	  <h2>Hier entsteht die Webseite von Dominik Höhr</h2>
-	  Die Webseite dient hauptsächlich zur Selbstpräsentation.
-	  <br />
-	  <img src="./DHR.png" width='300px' alt"DHR" />
-	  <br />
-	  Schauen Sie auch gerne auf meinem <a href="https://de.linkedin.com/in/dominik-h%C3%B6hr">Linked<img src="./LI-In-Bug.png" style="position: absolute;;" width='20px' alt="LinkedIn_IN_logo"/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-Profil</a> vorbei!
+    <div id="page-wraper">
+      <!-- Sidebar Menu -->
+      <div class="responsive-nav">
+        <i class="fa fa-bars" id="menu-toggle"></i>
+        <div id="menu" class="menu">
+          <i class="fa fa-times" id="menu-close"></i>
+          <div class="container">
+            <div class="image">
+              <a href="#"><img src="./DHR_squared.png" alt="" /></a>
+            </div>
+            <div class="author-content">
+              <h4>Dominik Höhr</h4>
+              <span>Student</span>
+            </div>
+            <nav class="main-nav" role="navigation">
+              <ul class="main-menu">
+                <li><a href="#section1">Über mich</a></li>
+                <li><a href="#section2">Fertigkeiten & Fähigkeiten</a></li>
+                <li><a href="#section3">Erfahrung</a></li>
+                <li><a href="#section4">Kontakt</a></li>
+              </ul>
+            </nav>
+            <div class="social-network">
+              <ul class="soial-icons">
+                
+                <li>
+                  <a href="https://de.linkedin.com/in/dominik-h%C3%B6hr"><i class="fa fa-linkedin"></i></a>
+                </li>
+                <li>
+                  <a href="https://github.com/hrdominik"><i class="fa fa-github"></i></a>
+                </li>
+                <li>
+                  <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#100;&#111;&#109;&#105;&#110;&#105;&#107;&#64;&#104;&#246;&#104;&#114;&#46;&#100;&#101;"><i class="fa fa-envelope"></i></a>
+                </li>
+                <br />
+                <li>
+                  <a href="#" style="margin-top: 5px; width: 100px;"><i class="fa fa-map-marker"> Paderborn</i></a>
+                </li>
+              </ul>
+            </div>
+            <div class="copyright-text">
+              <p>Copyright 2019 Reflux Design</p>
+            </div>
+            <!--
+            Reflux Template
+            https://templatemo.com/tm-531-reflux
+            -->
+          </div>
+        </div>
+      </div>
+
+      <section class="section about-me" data-section="section1">
+        <div class="container">
+          <div class="section-heading">
+            <h2>Über mich</h2>
+            <div class="line-dec"></div>
+            <span>
+              Ich bin Dominik Höhr, 20 Jahre alt, Student der Wirtschaftsinformatik an der Universität Paderborn.
+            </span>
+          </div>
+          <div class="left-image-post">
+            <div class="row">
+              <div class="col-md-6">
+                <div class="left-image">
+                  <img src="./DHR.png" alt="" />
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="right-text">
+                  <p>
+                    Interessiert bin ich an der Programmierung und die damit zusammenhängenden Prozesse in den Unternehmen und der Wirtschaft. <br /> <br />
+                    Aktuell studiere ich im 5.Semester und arbeite als Werkstudent in der Consulting-Branche.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="section my-services" data-section="section2">
+        <div class="container">
+          <div class="section-heading">
+            <h2>Fertigkeiten & Fähigkeiten</h2>
+            <div class="line-dec"></div>
+            <span>
+              Ich bin zur Zeit als Fullstack Webentwickler unterwegs. <br /> Dies kann, muss jedoch nicht immer so bleiben.
+            </span>
+          </div>
+          <div class="row">
+            <div class="col-md-6">
+              <div class="left-text">
+                <figure class="snip1321">
+                  <i class="second-service-icon service-icon"></i>
+                  <figcaption>
+                    <p>Softwareentwicklung</p>
+                    Frontend
+                    <i class="fa fa-html5"></i>
+                    <i class="fa fa-css3"></i>
+                    <i class="fa fa-reactjs"></i>
+                    <i class="fa fa-js"></i>
+                    Backend
+                    <i class="fa fa-python"></i>
+                    <i class="fa fa-java"></i>
+                    <i class="fa fa-sql"></i>
+                    Entwicklungs- und Buildprozess
+                    <i class="fa fa-git"></i>
+                    <i class="fa fa-yarn"></i>
+                    <i class="fa fa-maven"></i>
+                    Weitere
+                    <i class="fa fa-microsoft"></i> Insbesondere Sharepoint und Teams
+                  </figcaption>
+                </figure>
+              </div>
+              <div class="right-text">
+                <figure class="snip1321">
+                  <i class="first-service-icon service-icon"></i>
+                  <figcaption>
+                    <p>Fachliche Beratung</p>
+                    
+                  </figcaption>
+                </figure>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="section my-work" data-section="section3">
+        <div class="container">
+          <div class="section-heading">
+            <h2>Erfahrung</h2>
+            <div class="line-dec"></div>
+            <span>
+              Aktuell Student und Werkstudent
+            </span>
+            <br /> <br />
+            <p>
+              Ich suche ständig die Gelegenheit die erlernten Inhalte meines Studiums anzuwenden und zu erweitern und Erfahrungen in der Praxis zu sammeln.
+            </p>
+          </div>
+          <div class="row">
+            <div class="isotope-wrapper">
+              <form class="isotope-toolbar">
+                <label><input
+                    type="radio"
+                    data-type="*"
+                    checked=""
+                    name="isotope-filter"
+                  />
+                  <span>all</span></label>
+                <label><input
+                  type="radio"
+                  data-type="volunteering"
+                  name="isotope-filter"
+                />
+                <span>Ehrenamt</span></label>
+                <label><input
+                    type="radio"
+                    data-type="work"
+                    name="isotope-filter"
+                  />
+                  <span>Arbeit</span></label>
+                <label><input
+                    type="radio"
+                    data-type="education"
+                    name="isotope-filter"
+                  />
+                  <span>Ausbildung</span></label>
+                  <label><input
+                    type="radio"
+                    data-type="other"
+                    name="isotope-filter"
+                  />
+                  <span>Sonstige</span></label>
+              </form>
+              <div class="isotope-box">
+                <div class="isotope-item" data-type="volunteering">
+                  <div class="service-item">
+                    <div class="third-service-icon service-icon"></div>
+                    <h4>Aktives Mitglied</h4>
+                    <p>Seit Oktober 2019</p>
+                    <p>
+                      <a href="https://www.fsrwinfo.de" style="all: inherit;">FACHSCHAFTSRAT WIRTSCHAFTSINFORMATIK</a>
+                    </p>
+                  </div>
+                </div>
+                <div class="isotope-item" data-type="work">
+                  <div class="service-item">
+                    <div class="first-service-icon service-icon" ></div>
+                    <h4>Werkstudent</h4>
+                    <p>Seit August 2020</p>
+                    <p>
+                      <a href="https://www.beckmann-partner.de" style="all: inherit;">BECKMANN & PARTNER CONSULT</a> 
+                    </p>
+                    Konzeptionierung und Realisierung verschiedener interner Projekte
+                  </div>
+                  <div class="service-item">
+                    <div class="first-service-icon service-icon"></div>
+                    <h4>Aushilfe</h4>
+                    <p>April 2018 bis April 2019</p>
+                    <p>
+                      COMBI VERBRAUCHERMARKT 
+                    </p>
+                    Verkäufer auf der Ladenfläche
+                  </div>
+                </div>
+                <div class="isotope-item" data-type="education">
+                  <div class="service-item">
+                    <div class="second-service-icon service-icon"></div>
+                    <h4>Studium</h4>
+                    <p>Seit 2018</p>
+                    <p>
+                      UNIVERSITÄT PADERBORN
+                    </p>
+                    Wirtschaftsinformatik, Bachelor of Science 
+                  </div>
+                  <div class="service-item">
+                    <div class="second-service-icon service-icon"></div>
+                    <h4>Allgemeine Hochschulreife</h4>
+                    <p>2018</p>
+                    <p>
+                      GYMNASIUM SCHLOß HOLTE - STUKENBROCK
+                    </p>
+                  </div>
+                </div>
+                <div class="isotope-item" data-type="other">
+                  <div class="service-item">
+                    <div class="second-service-icon service-icon"></div>
+                    <h4>Teilnahme</h4>
+                    <p>
+                      PYTHON SPRINT, DÜSSELDORF <a href="https://www.pyddf.de" style="all: inherit;">(PyDDF)</a>
+                    </p>
+                    und weitere Meetings
+                  </div>
+                  <div class="service-item">
+                    <div class="second-service-icon service-icon"></div>
+                    <h4>Tonmeister Assistent</h4>
+                    <p>2012 bis 2018</p>
+                    <p>
+                      GYMNASIUM SCHLOß HOLTE - STUKENBROCK
+                    </p>
+                    Betreuung der Ton- und Lichttechnik bei diversen Schulveranstaltungen 
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="section contact-me" data-section="section4">
+        <div class="container">
+          <div class="section-heading">
+            <h2>Kontakt</h2>
+            <div class="line-dec"></div>
+            <span>
+              Ich freue mich jederzeit auf Ihre Anfrage.
+            </span>
+            <br /> <br />
+            <p>Erreichen können Sie mich per Mail an</p>
+            <div class="white-button">
+              <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#100;&#111;&#109;&#105;&#110;&#105;&#107;&#64;&#104;&#246;&#104;&#114;&#46;&#100;&#101;">dominik@höhr.de</a>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
+
+    <!-- Scripts -->
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+    <script src="assets/js/isotope.min.js"></script>
+    <script src="assets/js/owl-carousel.js"></script>
+    <script src="assets/js/lightbox.js"></script>
+    <script src="assets/js/custom.js"></script>
+    <script>
+      //according to loftblog tut
+      $(".main-menu li:first").addClass("active");
+
+      var showSection = function showSection(section, isAnimate) {
+        var direction = section.replace(/#/, ""),
+          reqSection = $(".section").filter(
+            '[data-section="' + direction + '"]'
+          ),
+          reqSectionPos = reqSection.offset().top - 0;
+
+        if (isAnimate) {
+          $("body, html").animate(
+            {
+              scrollTop: reqSectionPos
+            },
+            800
+          );
+        } else {
+          $("body, html").scrollTop(reqSectionPos);
+        }
+      };
+
+      var checkSection = function checkSection() {
+        $(".section").each(function() {
+          var $this = $(this),
+            topEdge = $this.offset().top - 80,
+            bottomEdge = topEdge + $this.height(),
+            wScroll = $(window).scrollTop();
+          if (topEdge < wScroll && bottomEdge > wScroll) {
+            var currentId = $this.data("section"),
+              reqLink = $("a").filter("[href*=\\#" + currentId + "]");
+            reqLink
+              .closest("li")
+              .addClass("active")
+              .siblings()
+              .removeClass("active");
+          }
+        });
+      };
+
+      $(".main-menu").on("click", "a", function(e) {
+        e.preventDefault();
+        showSection($(this).attr("href"), true);
+      });
+
+      $(window).scroll(function() {
+        checkSection();
+      });
+    </script>
   </body>
 </html>
