--- a/index.html
+++ b/index.html
@@ -117,38 +117,48 @@
           </div>
           <div class="row">
             <div class="col-md-6">
-              <div class="left-text">
-                <figure class="snip1321">
-                  <i class="second-service-icon service-icon"></i>
-                  <figcaption>
-                    <p>Softwareentwicklung</p>
-                    Frontend
-                    <i class="fa fa-html5"></i>
-                    <i class="fa fa-css3"></i>
-                    <i class="fa fa-reactjs"></i>
-                    <i class="fa fa-js"></i>
-                    Backend
-                    <i class="fa fa-python"></i>
-                    <i class="fa fa-java"></i>
-                    <i class="fa fa-sql"></i>
-                    Entwicklungs- und Buildprozess
-                    <i class="fa fa-git"></i>
-                    <i class="fa fa-yarn"></i>
-                    <i class="fa fa-maven"></i>
-                    Weitere
-                    <i class="fa fa-microsoft"></i> Insbesondere Sharepoint und Teams
-                  </figcaption>
-                </figure>
-              </div>
-              <div class="right-text">
-                <figure class="snip1321">
-                  <i class="first-service-icon service-icon"></i>
-                  <figcaption>
-                    <p>Fachliche Beratung</p>
-                    
-                  </figcaption>
-                </figure>
-              </div>
+              <figure class="snip1321 servicContent">
+                <div class="service">
+                  <h4>Softwareentwicklung</h4>
+                  <div class="line-dec"></div>
+                </div>
+                <figcaption>
+                  Frontend
+                  <ul>
+                  <li><i class="fa fa-html5"></i></li>
+                  <li><i class="fa fa-css3"></i></li>
+                  <li><i class="fa fa-reactjs"></i></li>
+                  <li><i class="fa fa-js"></i></li>
+                  </ul>
+                  Backend
+                  <ul>
+                  <li><i class="fa fa-python"></i></li>
+                  <li><i class="fa fa-java"></i></li>
+                  <li><i class="fa fa-sql"></i></li>
+                  </ul>
+                  Entwicklungs- und Buildprozess
+                  <ul>
+                  <li><i class="fa fa-git"></i></li>
+                  <li><i class="fa fa-yarn"></i></li>
+                  <li><i class="fa fa-maven"></i></li>
+                  </ul>
+                  Weitere
+                  <ul>
+                  <li><i class="fa fa-microsoft"></i> Insbesondere Sharepoint und Teams</li>
+                  </ul>
+                </figcaption>
+              </figure>
+            </div>
+            <div class="col-md-6">
+              <figure class="snip1321 servicContent">
+                <div class="service" >
+                  <h4>Fachliche Beratung</h4>
+                  <div class="line-dec"></div>
+                </div>
+                <figcaption>
+                  
+                </figcaption>
+              </figure>
             </div>
           </div>
         </div>
