added bigger links

--- a/index.html
+++ b/index.html
@@ -100,6 +100,28 @@
               </div>
             </div>
           </div>
+          <div class="right-image-post">
+            <div class="row">
+              <div class="col-md-6">
+                <div class="left-text">
+                  <p>Schauen Sie gerne auch auf meinen anderen Online-Profilen vorbei und verschaffen Sie sich einen detaillierten Überblick über mich, meinen bisherigen Werdegang und meine Leistungen.</p>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="right-image">
+                  <div class="moreContact">
+                    <div class="white-button">
+                      <a href="https://de.linkedin.com/in/dominik-h%C3%B6hr"><i class="fab fa-linkedin"></i> LinkedIn</a>
+                    </div> 
+                    &nbsp;&nbsp;&nbsp;
+                    <div class="white-button">
+                      <a href="https://github.com/hrdominik"><i class="fab fa-github"></i> GitHub</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
 
@@ -321,7 +343,7 @@
             <p>Erreichen können Sie mich per Mail an</p>
             <div class="white-button">
               <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#100;&#111;&#109;&#105;&#110;&#105;&#107;&#64;&#104;&#246;&#104;&#114;&#46;&#100;&#101;">dominik@höhr.de</a>
-            </div>
+            </div>          
           </div>
         </div>
       </section>
