--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <div class="row">
               <div class="col-md-6">
                 <div class="left-image">
-                  <img src="./DHR.png" alt="" />
+                  <img src="./DHR_FSR.png" alt="" />
                 </div>
               </div>
               <div class="col-md-6">
@@ -96,19 +96,9 @@
                     Interessiert bin ich an der Programmierung und die damit zusammenhängenden Prozesse in den Unternehmen und der Wirtschaft. <br /> <br />
                     Aktuell studiere ich im 6.Semester und arbeite als Werkstudent in der Consulting-Branche.
                   </p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="right-image-post">
-            <div class="row">
-              <div class="col-md-6">
-                <div class="left-text">
+                  <br />
+                  <hr style="background-color: white;" />
                   <p>Schauen Sie gerne auch auf meinen anderen Online-Profilen vorbei und verschaffen Sie sich einen detaillierten Überblick über mich, meinen bisherigen Werdegang und meine Leistungen.</p>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="right-image">
                   <div class="moreContact">
                     <div class="white-button">
                       <a href="https://de.linkedin.com/in/dominik-h%C3%B6hr"><i class="fab fa-linkedin"></i> LinkedIn</a>
