fixed Email to new domain

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                   <a href="https://github.com/hrdominik"><i class="fab fa-github"></i></a>
                 </li>
                 <li>
-                  <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#100;&#111;&#109;&#105;&#110;&#105;&#107;&#64;&#104;&#246;&#104;&#114;&#46;&#100;&#101;"><i class="fa fa-envelope"></i></a>
+                  <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;%64%6F%6D%69%6E%69%6B%40%68%6F%65%68%72%2E%6E%65%74"><i class="fa fa-envelope"></i></a>
                 </li>
                 <br />
                 <li>
@@ -332,7 +332,7 @@
             <br /> <br />
             <p>Erreichen können Sie mich per Mail an</p>
             <div class="white-button">
-              <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#100;&#111;&#109;&#105;&#110;&#105;&#107;&#64;&#104;&#246;&#104;&#114;&#46;&#100;&#101;">dominik@höhr.de</a>
+              <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;%64%6F%6D%69%6E%69%6B%40%68%6F%65%68%72%2E%6E%65%74">dominik@hoehr.net</a>
             </div>          
           </div>
         </div>
