--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script src="https://cdn.jsdelivr.net/gh/manucaralmo/GlowCookies@3.1.2/src/glowCookies.min.js"></script>
+    <script>
+        glowCookies.start('de', { 
+            style: 2,
+            analytics: 'G-FH87DE17XF',
+            position: 'right',
+            policyLink: 'https://link-to-your-policy.com'
+        });
+    </script>
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-JNT5581FYF"></script>
     <script>
