--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <link rel="stylesheet" href="assets/css/regular.min.css" />
     <link rel="stylesheet" href="assets/css/solid.min.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
+
   </head>
 
   <body>
@@ -75,7 +76,7 @@
                   <a href="https://github.com/hrdominik"><i class="fab fa-github"></i></a>
                 </li>
                 <li>
-                  <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;%64%6F%6D%69%6E%69%6B%40%68%6F%65%68%72%2E%6E%65%74"><i class="fa fa-envelope"></i></a>
+                  <a href="javascript:linkTo_UnCryptMailto('nbjmup;epnjojlAipfis/ofu');"><i class="fa fa-envelope"></i></a>
                 </li>
                 <br />
                 <li>
@@ -352,7 +353,7 @@
             <br /> <br />
             <p>Erreichen können Sie mich per Mail an</p>
             <div class="white-button">
-              <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;%64%6F%6D%69%6E%69%6B%40%68%6F%65%68%72%2E%6E%65%74">dominik@hoehr.net</a>
+              <a href="javascript:linkTo_UnCryptMailto('nbjmup;epnjojlAipfis/ofu');">dominik@hoehr.net</a>
             </div>          
           </div>
         </div>
