--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta name="description" content="Selbstdarstellung, Lebenslauf, portfolio" />
+    <link rel="icon" href="./favicon.ico" />
+    <link rel="apple-touch-icon" href="./favicon.png" />
+    <meta name="description" content="Selbstdarstellung, Lebenslauf, Portfolio" />
     <meta name="author" content="hrdominik" />
 
     <title>Dominik Höhr</title>
