--- a/links/index.html
+++ b/links/index.html
@@ -3,6 +3,8 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="../favicon.ico" />
+    <link rel="apple-touch-icon" href="../favicon.png" />
     <meta charset="UTF-8">
     <title>Dominik Höhr</title>
     <meta name="description" content="SocialMedia and Contact Links for Dominik Höhr" />
