--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <li><a href="#section2">Fertigkeiten & Fähigkeiten</a></li>
                 <li><a href="#section3">Erfahrung</a></li>
                 <li><a href="#section4">Kontakt</a></li>
-                <li><a href="./links">Links</a></li>
+                <li><a href="https://dominik.hoehr.net/links">Links</a></li>
               </ul>
             </nav>
             <div class="social-network">
