hotfix linktree link

--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
                 <li><a href="#section2">Fertigkeiten & Fähigkeiten</a></li>
                 <li><a href="#section3">Erfahrung</a></li>
                 <li><a href="#section4">Kontakt</a></li>
-                <li><a href="https://dominik.hoehr.net/links">Links</a></li>
               </ul>
             </nav>
             <div class="social-network">
@@ -357,7 +356,11 @@
             <p>Erreichen können Sie mich per Mail an</p>
             <div class="white-button">
               <a href="javascript:linkTo_UnCryptMailto('nbjmup;epnjojlAipfis/ofu');">dominik@hoehr.net</a>
-            </div>          
+            </div>  
+            <br /> <br />
+            <div class="white-button">
+              <a href="./links">Weitere Links</a>   
+            </div> 
           </div>
         </div>
       </section>
