hotfix linktree discord

--- a/links/index.html
+++ b/links/index.html
@@ -53,7 +53,7 @@
             <a class="link" href="https://www.facebook.com/dominikhr00"><i class="fab fa-facebook fa-2x"></i><label>Facebook</label><div></div></a>
             <a class="link" href="https://www.snapchat.com/add/hrdominik"><i class="fab fa-snapchat fa-2x"></i><label>Snapchat</label><div></div></a>
             <br />
-            <a class="link" id="discord" href="#"><i class="fab fa-discord fa-2x"></i><label></label><div></div></a>
+            <a class="link" id="discord"><i class="fab fa-discord fa-2x"></i><label></label><div></div></a>
             <a class="link" href="https://www.steamcommunity.com/id/thecrackd"><i class="fab fa-steam fa-2x"></i><label>Steam</label><div></div></a>
         </div>
     </div>
