added vcard without adress

--- a/links/index.html
+++ b/links/index.html
@@ -40,7 +40,7 @@
             <a class="link" href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;%64%6F%6D%69%6E%69%6B%40%68%6F%65%68%72%2E%6E%65%74"><i class="fa fa-envelope fa-2x"></i><label>E-Mail</label><div></div></a>
             <a class="link" href="tel:+491785247697"><div><i class="fa fa-phone-alt fa-2x"></i>   <i class="fab fa-whatsapp fa-2x"></i>  <i class="fab fa-telegram fa-2x"></i></div><label style="margin-left: -91px !important;">Telefonnummer</label><div></div></a>
             <br />
-            <!-- <a class="link" href="../DHR.vcf" download><i class="fa fa-address-book fa-2x"></i><label>Kontakt</label><div></div></a> -->
+            <a class="link" href="../DHR.vcf" download title="Vcard Download only for Android and Windows"><i class="fa fa-address-book fa-2x"></i><label>Kontakt</label><div></div></a>
         </div>
         
         <div class="heading">
