--- a/index.html
+++ b/index.html
@@ -1,16 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script src="https://cdn.jsdelivr.net/gh/manucaralmo/GlowCookies@3.1.2/src/glowCookies.min.js"></script>
-    <script>
-        glowCookies.start('de', { 
-            style: 2,
-            analytics: 'G-FH87DE17XF',
-            position: 'right',
-            policyLink: 'https://link-to-your-policy.com'
-        });
-    </script>
-
+    
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-JNT5581FYF"></script>
     <script>
@@ -18,8 +9,8 @@
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-JNT5581FYF');
-      gtag('config', 'UA-IHRE-TRACKING-ID', { 'anonymize_ip': true } );
+      gtag('config', 'G-QK926EKV20');
+      gtag('config', 'UA-199243991-1', { 'anonymize_ip': true } );
     </script>
     <meta charset="utf-8" />
     <meta
@@ -355,7 +346,7 @@
             <br /> <br />
             <p>Erreichen können Sie mich per Mail an</p>
             <div class="white-button">
-              <a href="javascript:linkTo_UnCryptMailto('nbjmup;epnjojlAipfis/ofu');">dominik@hoehr.net</a>
+              <a href="javascript:linkTo_UnCryptMailto('nbjmup;epnjojlAipfis/ofu');">dominik [at] hoehr.net</a>
             </div>  
             <br /> <br />
             <div class="white-button">
