console error fixes

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                     checked=""
                     name="isotope-filter"
                   />
-                  <span>all</span></label>
+                  <span>Alle</span></label>
                 <label><input
                   type="radio"
                   data-type="volunteering"
