--- a/index.html
+++ b/index.html
@@ -1,17 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script src="assets/js/cookies.js"></script>
     
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JNT5581FYF"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'G-QK926EKV20');
-      gtag('config', 'UA-199243991-1', { 'anonymize_ip': true } );
-    </script>
     <meta charset="utf-8" />
     <meta
       name="viewport"
