fix the back home button

--- a/links/index.html
+++ b/links/index.html
@@ -27,7 +27,9 @@
         </div>
 
         <br /> <br />
-        <a class="link" id="website" href="https://dominik.hoehr.net"> &laquo; Zurück zur Webseite</a>
+        <div id="home-center">
+        <div class="white-button"><a id="home" href="https://dominik.hoehr.net"> &laquo; Zurück zur Webseite</a></div>
+        </div>
 
         <div class="heading">
             <h2>Geschäftlich</h2>
