fix redunant css

--- a/links/index.html
+++ b/links/index.html
@@ -31,7 +31,7 @@
         <div class="white-button"><a id="home" href="https://dominik.hoehr.net"> &laquo; Zurück zur Webseite</a></div>
         </div>
 
-        <div class="heading">
+        <div class="section-heading">
             <h2>Geschäftlich</h2>
             <div class="line-dec"></div>
         </div>
@@ -45,7 +45,7 @@
             <a class="link" href="../DHR.vcf" download title="Vcard Download only for Android and Windows"><i class="fa fa-address-book fa-2x"></i><label>Kontakt</label><div></div></a>
         </div>
         
-        <div class="heading">
+        <div class="section-heading">
             <h2>Privat</h2>
             <div class="line-dec"></div>
         </div>
